kubernetes-volumes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homework
  labels:
    app: kubernetes-networks
