kubernetes-volumes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-networks
  namespace: homework
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kubernetes-networks
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: kubernetes-networks
    spec:
      nodeSelector:
        homework: "true"
      containers:
        - name: webserver
          image: nginx:1.26.3
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: files
              mountPath: /homework
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d
            - name: config-volume
              mountPath: /homework/conf
          lifecycle:
            preStop:
              exec:
                command:
                  - "/bin/sh"
                  - "-c"
                  - "nginx -s quit; while killall -0 nginx; do sleep 1; done"
          readinessProbe:
            httpGet:
              path: /index.html
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: files
          persistentVolumeClaim:
            claimName: homework-pvc
        - name: nginx-conf
          configMap:
            name: nginx-conf
            optional: false
        - name: config-volume
          configMap:
            name: homework-config
