kubernetes-volumes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-volumes-service
  namespace: homework
spec:
  type: ClusterIP
  selector:
    app: kubernetes-networks
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
